// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main component renders in landscape mode 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    hidden={true}
    onLayout={[Function]}
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
        }
      }
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Loading countries...
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          No regions.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Main component renders in portrait mode 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    hidden={true}
    onLayout={[Function]}
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View>
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Loading countries...
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          No regions.
        </Text>
      </View>
    </View>
  </View>
</View>
`;
